# gja_json_mcp

./: .gitignore  LICENSE  README.md  bria_mcp_server.py  config.example.json  pyproject.toml  requirements.txt  setup.sh  setup_uv.sh
tests/: __init__.py  test_bria_mcp_server.py
